# remarkable-tablet-cli-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md
crates/remarkable-cli/: Cargo.toml
crates/remarkable-cli/src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/remarkable-cli/src/commands/: backup.rs  common.rs  connect.rs  download.rs  find.rs  info.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  notebook_pages.rs  rename.rs  render.rs  rm.rs  upload.rs
crates/remarkable-cli/tests/: backup.rs  browse.rs  cli.rs  download.rs  mutations.rs  output_snapshots.rs  render.rs  upload.rs
crates/remarkable-cli/tests/snapshots/: cli__ls_help_snapshot.snap  cli__root_help_snapshot.snap  output_snapshots__find_substring_match_human.snap  output_snapshots__ls_documents_only_human.snap  output_snapshots__ls_recursive_human.snap  output_snapshots__ls_root_human.snap  output_snapshots__ls_root_json.snap  output_snapshots__ls_tree_json.snap
crates/remarkable-metadata/: Cargo.toml
crates/remarkable-metadata/src/: error.rs  lib.rs  metadata.rs  path_resolver.rs  sort.rs  tree.rs
crates/remarkable-metadata/tests/: metadata.rs
crates/remarkable-metadata/tests/fixtures/: doc_epub.metadata  doc_in_folder.metadata  folder_root.metadata
crates/remarkable-rm/: Cargo.toml
crates/remarkable-rm-parser/: Cargo.toml
crates/remarkable-rm-parser/src/: blocks.rs  document.rs  lib.rs  primitives.rs  tag.rs
crates/remarkable-rm-parser/src/scene/: items.rs  tree.rs
crates/remarkable-rm-parser/tests/fixtures/: README.md  edits.rm  pens-small.rm
crates/remarkable-rm/examples/: dump_page.rs
crates/remarkable-rm/src/: blocks.rs  crdt.rs  document.rs  error.rs  lib.rs  primitives.rs  render.rs  tag.rs
crates/remarkable-rm/src/scene/: items.rs  line.rs  mod.rs  text.rs  tree.rs
crates/remarkable-rm/tests/: parse_page.rs  render.rs
crates/remarkable-rm/tests/fixtures/: README.md  layers.rm  smoke.rm
crates/remarkable-tablet/: Cargo.toml
crates/remarkable-tablet/src/: error.rs  lib.rs  metadata_loader.rs  tablet.rs  transfer.rs
crates/remarkable-tablet/src/connection/: fake.rs  mod.rs  ssh.rs
crates/remarkable-tablet/tests/: connect.rs  tree.rs
src/: app.rs  cli.rs  config.rs  connection.rs  error.rs  lib.rs  main.rs  metadata.rs  metadata_loader.rs  output.rs  page_range.rs  path_resolver.rs  tablet.rs  transfer.rs  tree.rs
src/commands/: backup.rs  common.rs  connect.rs  download.rs  find.rs  info.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rename.rs  rm.rs  upload.rs
src/connection/: fake.rs  mod.rs  ssh.rs
tests/: backup.rs  browse.rs  connect.rs  download.rs  metadata.rs  output_snapshots.rs  tree.rs  upload.rs
tests/fixtures/: doc_epub.content  doc_in_folder.content  doc_minimal.metadata  doc_trashed.content  doc_trashed.metadata
tests/snapshots/: cli__root_help_snapshot.snap  output_snapshots__connect_human.snap  output_snapshots__connect_json.snap  output_snapshots__find_glob_match_human.snap  output_snapshots__find_no_match_human.snap  output_snapshots__find_substring_match_json.snap  output_snapshots__info_document_human.snap  output_snapshots__info_document_json.snap  output_snapshots__info_folder_human.snap  output_snapshots__info_pinned_epub_human.snap  output_snapshots__ls_include_trashed_recursive_human.snap  output_snapshots__ls_subfolder_human.snap  output_snapshots__ls_tree_human.snap
