[package]
name = "remarkable-tablet-cli-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "remarkable-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
russh = "=0.57.1"
russh-sftp = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
toml = "0.8"

