[package]
name = "remarkable-tablet-cli-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "remarkable-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
glob = "0.3"
russh = "=0.57.1"
russh-sftp = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"

