[workspace]
members = [
    "crates/remarkable-metadata",
    "crates/remarkable-tablet",
    "crates/remarkable-rm",
    "crates/remarkable-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["Nikolai Golub <nikolay.v.golub@gmail.com>"]
repository = "https://github.com/nikolaygolub/remarkable-tablet-cli-rs"
homepage = "https://github.com/nikolaygolub/remarkable-tablet-cli-rs"
readme = "README.md"
keywords = ["remarkable", "cli", "tablet", "ssh", "sftp"]
categories = ["command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
filetime = "0.2"
futures = "0.3"
glob = "0.3"
russh = "=0.57.1"
russh-sftp = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
uuid = { version = "1", features = ["v4", "serde"] }

# In-tree crates referenced by sibling crates.
remarkable-metadata = { path = "crates/remarkable-metadata", version = "0.1.0" }
remarkable-tablet = { path = "crates/remarkable-tablet", version = "0.1.0" }
remarkable-rm = { path = "crates/remarkable-rm", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
