[package]
name = "remarkable-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parse reMarkable tablet .metadata/.content JSON and build a logical document tree."

[features]
# Adds `clap::ValueEnum` derives on the public `SortField` and `EntryKindFilter`
# enums, so callers can use them directly in clap-derived CLI arg structs.
clap = ["dep:clap"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

clap = { workspace = true, optional = true }

[lints]
workspace = true
