[package]
name = "remarkable-rm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parser and renderer for reMarkable .rm notebook page files (Phase 4 — work in progress)."

[dependencies]
thiserror.workspace = true
tiny-skia = "0.11"
uuid.workspace = true

[lints]
workspace = true
